release: RedstoneReboot v1.6.0 - dump, dev api, discord, fixes
- add /reboot dump (DumpGenerator) with sanitized diagnostic output, redstonereboot.dump permission, works on Bukkit/Folia/Fabric/Forge/NeoForge
- add RedstoneRebootAPI singleton, RestartListener, MessageAdapter/MessageContext, DiscordWebhookAdapter - platform-agnostic dev/message api, discord auto-wire via integrations.discord in config.yml/properties
- fix Docker/Pterodactyl mismatch false positive in Core and doctor
- fix UpdateChecker platform-aware (Paper vs NeoForge) and base-version compare, synchronized periodic checks
- fix BackendConfig env placeholder handling, PlatformLoadMonitor/ServerLoadMonitor emergency latch, RestartManager controller safety task leak
- add backend/mod config versioning with migration and backups (config-version:2)
- add permission handling for dump on mods
- strip generic AI comments from 68 files, keep api/docs human
- bump version 1.5.0 -> 1.6.0, update docs and tests